
[package]
name = "first-program"
version = "0.0.1"
description = "Example Solana Program written in Rust"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3"
num_enum = "0.5.1"
num-integer = "0.1.44"
num-traits = "0.2"
solana-program = "1.7.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]
